resources/assets/scss/_helpers.scss
a{
    text-decoration:none !important;
}
.section{
    margin-top:5rem;
}
.text-gray {
    color: $gray-700;
}
.btn{
    position: relative;
}
.text-danger {
    color: red !important;
}
.border-gray{
    border-color: #c3c3c3!important;
}
.text-danger-dark {
    color: $danger;
}
footer .bl-1{
  border-color:#ccc;
}
.text-small {
    font-size: 6px;
    color: #ccc;
}
.bg-black{
    background:#000;
}
.bg-lightgray{
    background-color: #f9f9f9;
}
.bg-brown{
    background-color: #fdf5e7;
}
.overflow-h{
    overflow: hidden !important;
}
.kss_highlight {
    cursor: pointer;
}
.kss-link {
    color: #212529;
    font-size: 0.9rem;
    margin-bottom: 10px;
    text-decoration: none !important;
}
.r-0{
    right: 10px;
}
.br-0 {
    border: 0px;
    background: none !important;
}
.br-1 {
    border: 1px solid #ccc !important;
    background: none !important;
}
.bl-1 {
    border-left: 1px solid #e8eae8;
}
.dashed {
    border-style: dashed;
}
.no-outline{
    outline: 0;
}
.icon-md{
    font-size: 1.2em;
}
.cursor-auto{
    cursor: auto !important;
}
.letter-spacing-5{
    letter-spacing: 5px;
}
.kss_icon {
    background-image: url(../img/sprite.png);
    background-repeat: no-repeat;
    width: 30px;
    height: 33px;
    display: inline-block;
    margin-bottom: -4px;
}
.kss-ico{
    background-image: url(../img/sprite.png);
    background-repeat: no-repeat;
}
.icon-truck-sm{
    @extend .kss-ico;
    width: 20px;
    height: 20px;
    background-position: 3px -209px;
    display: inline-block;
}
.icon-master-card{
    @extend .kss-ico;
    width: 36px;
    height: 24px;
    background-position: -11px -457px;
    display: inline-block;
}
.icon-visa{
    @extend .kss-ico;
    background-position: -69px -458px;
    width: 48px;
    transform: scale(0.8);
    margin-left: -2px !important;
    margin-right: -2px !important;
}
.icon-rupay{
    @extend .kss-ico;
    background-position: -133px -458px;
    width: 70px;
}
.no-card{
    width: 35px;
    font-size: 2em;
    text-align: center;
    position: relative;
    top: -4px;
}
.icon-cod{
    @extend .kss-ico;
    width: 60px;
    height: 63px;
    background-position: -403px -209px;
    display: inline-block;
}
.icon-return{
    @extend .kss-ico;
    width: 60px;
    height: 63px;
    background-position: -403px -409px;
    display: inline-block;
}
.icon-shipping{
    @extend .kss-ico;
    width: 60px;
    height: 63px;
    background-position: -403px -309px;
    display: inline-block;
}
.kss_disable {
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
}
.kss_sort li {
    border-bottom: 1px solid #f2f2f2;
}
.popularity {
    background-position: -24px -10px;
    background-size: 295px;
}
.latest {
    background-position: -71px -10px;
    background-size: 295px;
}
.discount {
    background-position: -121px -10px;
    background-size: 295px;
}
.search-icon {
    background-position: -6px -138px;
}
.heart-icon {
    background-position: -43px -138px;
}
.profile-icon {
    background-position: -107px -138px
}
.bag-icon {
    background-position: -501px -275px;
}
.bag-icon-fill {
    background-position: -501px -245px;
}
.icon-sm{
    transform: scale(0.8);
    margin-top: -1px;
}
.price-h {
    background-position: -180px -10px;
    background-size: 295px;
}
.k-icon{
    background: url(../img/sprite.png) no-repeat;
    width: 50px;
    height: 50px;
    position: absolute;
    right: 10px;
    bottom: 15px;
}
.candy-1{
        background-position: -16px -210px;
}
.candy-2{
        background-position: -87px -210px;
}
.candy-3{
        background-position: -155px -214px;
}
.candy-4{
        background-position: -225px -214px;
}
.top-icon {
    background: url(../img/sprite.png)no-repeat;
    width: 50px;
    height: 50px;
    background-position: -223px -119px;
    margin: 0 auto;
}
.price-l {
    background-position: -240px -10px;
    background-size: 295px;
}
.center {
    img {
        width: 100%;
    }
}
.fade-on {
    opacity: 0;
}
.cursor-pointer {
    cursor: pointer;
}
.go-top {
    position: fixed;
    cursor: pointer;
    bottom: 2em;
    right: 2em;
    text-decoration: none;
    text-align: center;
    font-size: 1em;
    display: none;
    padding: 1em;
    z-index: 1;
    @media (min-width: 320px) and (max-width: 767.98px) {
        bottom: 5em;
        right: 0em;
        display: none !important;
    }
}

.kss-alert{
    border-radius: 0;
    width: 300px;
    color: #fff;
    &--success{
        background-color: #71a764;
        border-color: #71a764;
    }
    &--failure{
        background-color: #bc6760;
        border-color: #bc6760;
    }
    @media (min-width: 768px){
        width: 350px;
        .icon{
            font-size: 1.8em;
        }
        .message{
            font-size: 1.15em;
        }
    }
    .alert-close{
        text-shadow: none;
        color: #fff;
        opacity: 1;
        outline: 0;
    }
    &.sticky-alert{
        position: fixed;
        top: 0;
        z-index: 99;
        right: 0;
        width: calc(80% - 1rem);
        transform: translateY(-500px);
        transition: all 0.5s ease;
        @media (min-width: 768px) {
            width: calc(400px - 1rem);
        }
        @media (max-width: 767.98px) {
            width: calc(100% - 1rem);
            font-size: 1.1em;
        }
        @media (min-width: 992px) and (min-width: 1199.98px) {
            width: calc(40% - 1rem) !important;
        }
        @media (min-width: 1300px) {
            width: calc(30% - 1rem) !important;
        }
    }
    &.is-open{
        pointer-events: auto;
        transform: translateX(0);
    }
}

.kss-toast{
    padding: 15px 20px;
    color: #fff;
    background: rgba(0,0,10,0.7);
    display: inline-block;
    position: fixed;
    top: 0px;
    transform: translateY(-150px);
    right: 30px;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
    transition: all 0.5s ease-out;
    &.shown{
        transform: translateY(70px);
    }
}


 @media (min-width: 320px) and (max-width: 992px) {
    .overflow-m{
        overflow-x:scroll;
        display: grid;
        grid-gap: 10px;
        grid-template-columns: 5px repeat(4, calc(50% - 40px)) 5px;
        grid-template-rows: minmax(150px, 1fr);
        .col-6{
            max-width: 100%;
            padding: 0;
        }
        &::before,
        &::after {
          content: '';
        }
    }
}

@media (max-width: 767px){
    .one-em{
        font-size: 1em;
    }
    .fz-sm{
        font-size: 1.1em;
    }
    .no-shadow-mobile{
        box-shadow: none !important;
    }
}

.sticky-menu{
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 54px;
    background: #fff;
    box-shadow: 2px 2px 2px #5a5656;
    padding: 12px;
    z-index: 999;
}

.blur-up {
    -webkit-filter: blur(5px);
    filter: blur(5px);
    transition: filter 500ms ease-in;
}

.blur-up.lazyloaded {
    -webkit-filter: blur(0);
    filter: blur(0);
    -webkit-backface-visibility: hidden;
    -webkit-transform: translate3d(0,0,0);
}

.white-space-normal{
    white-space: normal;
}

.line-height-5{
    line-height: 1.5;
    @media (max-width: 767px){
        line-height: 1.3;
    }
}

.lower-roman{
    list-style-type: lower-roman;
}

.custom-table{
    tr{
        th,td{
            padding: 11px 10px;
        }
        th{
            border: 1px solid #cacaca;
        }
        td{
            border: 1px solid #cacaca;
        }
    }
}

.img-fit{
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.section-title{
    font-size: 1.1rem;
    @media (max-width: 600px){
        font-size: .9rem;
    }
}

.newsletter{
    .form-control.newsletter__input{
        background-color: #fff;
        padding: 10px;
    }
    &__btn{
        border-radius: 0;
        border: 0;
        padding: 10px 0.75rem;
    }
}

.kss-input-small{
    width: 35%;
}

.kss-flash{
    padding: 0.8em;
    margin: 0.8em 0;
    font-weight: 600;
    font-size: 1rem;
    line-height: 1.4;
    &--info{
        background-color: $flash-info-bg;
        color: $flash-info-color;
    }
    &--error{
        background-color: $flash-error-bg;
        color: $flash-error-color;
    }
}

.disabled{
    opacity: 0.5;
    pointer-events: none;
}

.more-link{
    font-size: 1.2em;
    font-weight: 600;
    color: theme-color("secondary");
    &:hover{
        color: darken(theme-color("secondary"),20%);
    }
    .arrow-down{
        padding-left: 8px;
        font-size: 1.1em;
    }
}

.viewall-link{
    display: inline-block;
    font-size: 1.4em;
    color: theme-color("secondary");
    font-weight: 400;
    padding: 10px 5px 2px 5px;
    // border-bottom: 2px solid;
    &:hover{
        color: darken(theme-color("secondary"),20%);
    }
}

.cs-hidden {
    height: 1px;
    opacity: 0;
    filter: alpha(opacity=0);
    overflow: hidden;
}

.filter-grayscale{
    filter: grayscale(100%);
}

